Enhance event emission and improve buffer management (#79)
* Enhance event emission for bootstrap and failure events, and improve aggregate buffer management

* Refactor SocketChannelFdAccess and NativeTcpCarrier for improved FD access and backend selection

* Refactor CommunityHttpExchange response handling and improve test assertions

* Refactor CommunityHttpSubsystem and CommunityHttpExchange for improved response handling and error management

* Refactor NativeTcpCarrier and NativeTcpStream to simplify constructor parameters and improve socket handling

* Refactor NativeTcpCarrier and NativeTcpStream to optimize import statements and improve code organization

* Refactor persistence documentation and remove unused PersistenceEngineCapabilities references

* Refactor CommunityHttpSubsystem and ProcessingState for improved code organization and clarity

* Refactor ProcessingState to improve aggregate management and introduce AggregateExpansion for better resource handling

* Add unit tests for ProcessingState to validate aggregate management during allocation failures

* Refactor SocketChannelFdReflectionResolver and NativeTcpCarrier for improved method resolution and detail handling

* Refactor NativeTcpStreamCloseWakeupTest for improved import organization and clarity

* Enhance NativeTcpCarrier and SyscallErrno for improved Windows support and error handling