@@ -14,6 +14,8 @@ import eu.exeris.kernel.core.memory.WatermarkManager;
 import eu.exeris.kernel.core.transport.scheduler.AdmissionController;
 import eu.exeris.kernel.core.transport.scheduler.PaqsScheduler;
 import eu.exeris.kernel.core.transport.scheduler.StreamLoadShedder;
+import eu.exeris.kernel.core.transport.syscall.CoreSyscallLoader;
+import eu.exeris.kernel.core.transport.syscall.SyscallHandles;
 import eu.exeris.kernel.spi.crypto.CryptoProviderConfig;
 import eu.exeris.kernel.spi.crypto.KernelCryptoProvider;
 import eu.exeris.kernel.spi.crypto.TlsEngine;
@@ -26,13 +28,15 @@ import eu.exeris.kernel.spi.transport.StreamPriority;
 import eu.exeris.kernel.spi.transport.TransportConfig;
 import eu.exeris.kernel.spi.transport.TransportConnection;
 import eu.exeris.kernel.spi.transport.TransportEngine;
-import eu.exeris.kernel.spi.transport.TransportEngineCapabilities;
 import eu.exeris.kernel.spi.transport.TransportMode;
 import eu.exeris.kernel.spi.transport.TransportStats;
 
 import java.io.IOException;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ValueLayout;
+import java.net.InetAddress;
 import java.net.InetSocketAddress;
-import java.nio.ByteBuffer;
 import java.nio.channels.AsynchronousCloseException;
 import java.nio.channels.CancelledKeyException;
 import java.nio.channels.SelectionKey;
@@ -42,14 +46,17 @@ import java.nio.channels.SocketChannel;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 import java.util.Objects;
 import java.util.Queue;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.locks.LockSupport;
 
 /**
@@ -74,21 +81,47 @@ public final class NativeTcpCarrier implements TransportEngine {
 
     private static final System.Logger LOG = System.getLogger(NativeTcpCarrier.class.getName());
     private static final String ENGINE_NAME = "CommunityNativeTcpCarrier";
+    private static final String SOCKET_BACKEND_PROPERTY = "exeris.community.transport.socket.backend";
+    private static final String SOCKET_BACKEND_ENV = "EXERIS_COMMUNITY_TRANSPORT_SOCKET_BACKEND";
+    private static final String SOCKET_BACKEND_ENV_ALIAS = "SOCKET_BACKEND_ENV";
+    private static final String SOCKET_BACKEND_AUTO = "auto";
+    private static final String SOCKET_BACKEND_NIO = "nio";
+    private static final String SOCKET_BACKEND_POSIX_HYBRID = "posix-hybrid";
+    private static final String ACTIVE_NIO_FALLBACK_DETAIL = "continuing on the active NIO fallback.";
+    private static final String LOOPBACK_HOST = InetAddress.getLoopbackAddress().getHostAddress();
+    private static final byte LOOPBACK_FIRST_OCTET = 127;
+    private static final byte LOOPBACK_SECOND_OCTET = 0;
+    private static final byte LOOPBACK_THIRD_OCTET = 0;
+    private static final byte LOOPBACK_FOURTH_OCTET = 1;
+    private static final int AF_INET = 2;
+    private static final int SOCK_STREAM = 1;
+    private static final int DEFAULT_IP_PROTOCOL = 0;
+    private static final int SOCKADDR_IN_SIZE = 16;
+    private static final boolean SOCKADDR_INCLUDES_LENGTH = usesBsdSockaddrLayout();
+    private static final boolean IS_WINDOWS_RUNTIME =
+            System.getProperty("os.name", "").toLowerCase(Locale.ROOT).startsWith("windows");
     private static final long CLIENT_TLS_INGRESS_IDLE_BACKOFF_INITIAL_NANOS = 250_000L;
     private static final long CLIENT_TLS_INGRESS_IDLE_BACKOFF_MAX_NANOS = 2_000_000L;
     private static final long CLIENT_WRITER_BACKOFF_INITIAL_NANOS = 250_000L;
     private static final long CLIENT_WRITER_BACKOFF_MAX_NANOS = 2_000_000L;
-    private static final TransportEngineCapabilities CAPS =
-            TransportEngineCapabilities.STANDARD.withProvider("community-transport");
+    private static final int MIN_LISTENER_BACKLOG = 64;
+    private static final int MAX_LISTENER_BACKLOG = 1_024;
 
     private final TransportConfig config;
     private final MemoryAllocator allocator;
     private final KernelCryptoProvider cryptoProvider;
     private final CryptoProviderConfig cryptoConfig;
-    private final TransportEngineCapabilities capabilities;
+    private final SocketBackendMode requestedSocketBackend;
+    private final Arena socketBackendArena;
+    private final SyscallHandles socketHandles;
+    private final boolean ffmSocketBackendArmed;
 
     private final AtomicBoolean running = new AtomicBoolean(false);
     private final AtomicBoolean closed = new AtomicBoolean(false);
+    private final AtomicBoolean serverSocketValidationAttempted = new AtomicBoolean(false);
+    private final AtomicBoolean serverSocketValidationSuccessful = new AtomicBoolean(false);
+    private final AtomicBoolean clientSocketValidationAttempted = new AtomicBoolean(false);
+    private final AtomicBoolean clientSocketValidationSuccessful = new AtomicBoolean(false);
 
     private final AtomicLong streamSeq = new AtomicLong(1);
     private final AtomicLong connectionSeq = new AtomicLong(1);
@@ -106,27 +139,37 @@ public final class NativeTcpCarrier implements TransportEngine {
     private final List<ReactorLoop> reactors = new ArrayList<>();
     private final AtomicInteger nextReactorIndex = new AtomicInteger(0);
 
+    /**
+     * Canonical per-channel runtime registry. Carrier-side ownership, client pumps,
+     * and stream lifecycle coordination resolve through this map.
+     */
+    private final ConcurrentMap<SocketChannel, ChannelRuntimeState> runtimeByChannel = new ConcurrentHashMap<>();
+
+    /**
+     * Compatibility mirrors retained for diagnostics and existing transport tests.
+     */
     private final ConcurrentMap<SocketChannel, NativeTcpStream> streamByChannel = new ConcurrentHashMap<>();
     private final ConcurrentMap<SocketChannel, ReactorLoop> channelOwner = new ConcurrentHashMap<>();
-    private final ConcurrentMap<SocketChannel, Thread> clientIngressThreads = new ConcurrentHashMap<>();
-    private final ConcurrentMap<SocketChannel, Thread> clientWriterThreads = new ConcurrentHashMap<>();
 
     /* default */ NativeTcpCarrier(TransportConfig config,
                      MemoryAllocator allocator,
                      KernelCryptoProvider cryptoProvider,
-                     CryptoProviderConfig cryptoConfig,
-                     String providerId) {
+                     CryptoProviderConfig cryptoConfig) {
         this.config = Objects.requireNonNull(config, "config must not be null");
         this.allocator = Objects.requireNonNull(allocator, "allocator must not be null");
         this.cryptoProvider = cryptoProvider;
         this.cryptoConfig = cryptoConfig;
-        String resolvedProviderId = Objects.requireNonNull(providerId, "providerId must not be null");
-        this.capabilities = new TransportEngineCapabilities(
-            CAPS.supportsMultiplexing(),
-            CAPS.supportsZeroCopy(),
-            CAPS.transportName(),
-            resolvedProviderId
-        );
+        SocketBackendSelection backendSelection = SocketBackendSelection.resolve();
+        this.requestedSocketBackend = backendSelection.requestedMode();
+        this.socketBackendArena = backendSelection.socketBackendArena();
+        this.socketHandles = backendSelection.socketHandles();
+        this.ffmSocketBackendArmed = backendSelection.ffmSocketBackendArmed();
+        LOG.log(System.Logger.Level.INFO, () ->
+                "[NativeTcpCarrier] Community socket backend mode="
+                        + backendSelection.requestedMode().configValue()
+                        + ", active=" + activeSocketBackend()
+                        + ", ffmArmed=" + backendSelection.ffmSocketBackendArmed()
+                        + " - " + backendSelection.detail());
     }
 
     @Override
@@ -212,6 +255,7 @@ public final class NativeTcpCarrier implements TransportEngine {
         SocketChannel channel = null;
         TlsEngine tlsEngine = null;
         try {
+            validateClientSocketBackendOnce(host, port);
             channel = SocketChannel.open();
             channel.configureBlocking(true);
             channel.connect(new InetSocketAddress(host, port));
@@ -235,15 +279,16 @@ public final class NativeTcpCarrier implements TransportEngine {
                     allocator,
                     tlsEngine,
                     () -> requestClientWriteFlush(connectedChannel),
-                    () -> onStreamClosed(connectedChannel));
+                    () -> onStreamClosed(connectedChannel),
+                    socketHandles);
             if (tlsEngine instanceof eu.exeris.kernel.community.crypto.CommunityTlsEngine) {
                 stream.markTlsBoundFromCarrier();
             }
 
             connection.bindSingleStream(stream);
-                streamByChannel.put(connectedChannel, stream);
-                startClientIngressPump(connectedChannel, stream);
-                startClientWriterPump(connectedChannel, stream);
+            ChannelRuntimeState runtime = registerRuntime(stream, connectedChannel);
+            startClientIngressPump(runtime);
+            startClientWriterPump(runtime);
             activeConnections.incrementAndGet();
             activeStreams.incrementAndGet();
             totalAccepted.incrementAndGet();
@@ -285,11 +330,6 @@ public final class NativeTcpCarrier implements TransportEngine {
     }
 
     @Override
-    public TransportEngineCapabilities capabilities() {
-        return capabilities;
-    }
-
-    @Override
     public String engineName() {
         return ENGINE_NAME;
     }
@@ -299,7 +339,63 @@ public final class NativeTcpCarrier implements TransportEngine {
         if (!closed.compareAndSet(false, true)) {
             return;
         }
-        stop();
+        Arena arena = socketBackendArena;
+        try (arena) {
+            try {
+                stop();
+            } finally {
+                bestEffortWsaCleanup(socketHandles);
+            }
+        }
+    }
+
+    private static void bestEffortWsaCleanup(SyscallHandles handles) {
+        if (handles == null || !handles.hasWsaCleanup()) {
+            return;
+        }
+        try {
+            handles.wsaCleanup().invokeExact();
+        } catch (Throwable _) {
+            // best effort
+        }
+    }
+
+    /* default */ String requestedSocketBackend() {
+        return requestedSocketBackend.configValue();
+    }
+
+    /* default */ String activeSocketBackend() {
+        if (requestedSocketBackend == SocketBackendMode.NIO) {
+            return SOCKET_BACKEND_NIO;
+        }
+        return isPosixHybridBackendActive() ? SOCKET_BACKEND_POSIX_HYBRID : SOCKET_BACKEND_NIO;
+    }
+
+    private boolean isPosixHybridBackendActive() {
+        return ffmSocketBackendArmed;
+    }
+
+    /* default */ boolean isFfmSocketBackendArmed() {
+        return ffmSocketBackendArmed;
+    }
+
+    /* default */ boolean isServerSocketValidationSuccessful() {
+        return serverSocketValidationSuccessful.get();
+    }
+
+    /* default */ boolean isClientSocketValidationSuccessful() {
+        return clientSocketValidationSuccessful.get();
+    }
+
+    /* default */ int listenerBacklog() {
+        return computeListenerBacklog(config.maxConnections());
+    }
+
+    private static int computeListenerBacklog(int maxConnections) {
+        if (maxConnections <= 0) {
+            return MIN_LISTENER_BACKLOG;
+        }
+        return Math.clamp(maxConnections, MIN_LISTENER_BACKLOG, MAX_LISTENER_BACKLOG);
     }
 
     private void initPaqs() {
@@ -317,6 +413,7 @@ public final class NativeTcpCarrier implements TransportEngine {
 
     private void startServerRuntime() {
         try {
+            validateServerSocketBootstrapOnce();
             int reactorCount = Math.max(1, config.reactorCount());
             reactors.clear();
             for (int i = 0; i < reactorCount; i++) {
@@ -326,7 +423,7 @@ public final class NativeTcpCarrier implements TransportEngine {
 
             serverChannel = ServerSocketChannel.open();
             serverChannel.configureBlocking(true);
-            serverChannel.bind(new InetSocketAddress(config.bindAddress(), config.port()));
+            serverChannel.bind(new InetSocketAddress(config.bindAddress(), config.port()), listenerBacklog());
 
             for (ReactorLoop reactor : reactors) {
                 reactor.start();
@@ -384,7 +481,7 @@ public final class NativeTcpCarrier implements TransportEngine {
         if (!(key.channel() instanceof SocketChannel channel)) {
             return;
         }
-        NativeTcpStream stream = streamByChannel.get(channel);
+        NativeTcpStream stream = resolveStream(channel);
         if (stream == null) {
             return;
         }
@@ -425,20 +522,28 @@ public final class NativeTcpCarrier implements TransportEngine {
                         allocator,
                         tlsEngine,
                         () -> requestWriteInterest(currentChannel),
-                        () -> onStreamClosed(currentChannel));
+                        () -> onStreamClosed(currentChannel),
+                        socketHandles);
                 if (tlsEngine instanceof eu.exeris.kernel.community.crypto.CommunityTlsEngine) {
                     stream.markTlsBoundFromCarrier();
                 }
 
                 connection.bindSingleStream(stream);
-                streamByChannel.put(currentChannel, stream);
+                ChannelRuntimeState runtime = registerRuntime(stream, currentChannel);
                 connectionManagedByStreamLifecycle = true;
                 ReactorLoop owner = selectReactor();
-                channelOwner.put(currentChannel, owner);
+                runtime.markRegistrationPending();
+                runtime.bindOwner(owner);
                 owner.enqueueRegistration(currentChannel);
 
                 activeStreams.incrementAndGet();
                 totalAccepted.incrementAndGet();
+
+                if (!stream.awaitRegistrationReadyForConnection()) {
+                    connection.close();
+                    acceptedChannel = serverChannel.accept();
+                    continue;
+                }
 
                 if (!stream.awaitHandshakeReadyForConnection()) {
                     connection.close();
@@ -483,8 +588,30 @@ public final class NativeTcpCarrier implements TransportEngine {
         return reactors.get(index);
     }
 
+    private ChannelRuntimeState registerRuntime(NativeTcpStream stream,
+                                                SocketChannel channel) {
+        ChannelRuntimeState runtime = new ChannelRuntimeState(channel, stream);
+        ChannelRuntimeState previous = runtimeByChannel.putIfAbsent(channel, runtime);
+        if (previous != null) {
+            throw new IllegalStateException(
+                    "Transport runtime already registered for channel on backend "
+                            + previous.socketBackend() + ": " + channel);
+        }
+        streamByChannel.put(channel, stream);
+        return runtime;
+    }
+
+    private ChannelRuntimeState resolveRuntime(SocketChannel channel) {
+        return runtimeByChannel.get(channel);
+    }
+
+    private NativeTcpStream resolveStream(SocketChannel channel) {
+        ChannelRuntimeState runtime = resolveRuntime(channel);
+        return runtime != null ? runtime.stream() : streamByChannel.get(channel);
+    }
+
     private void readIngress(SocketChannel channel) {
-        NativeTcpStream stream = streamByChannel.get(channel);
+        NativeTcpStream stream = resolveStream(channel);
         if (stream == null) {
             return;
         }
@@ -498,9 +625,7 @@ public final class NativeTcpCarrier implements TransportEngine {
         }
 
         try (LoanedBuffer slab = allocator.allocateCarrierSlab(0)) {
-            ByteBuffer target = slab.segment().asByteBuffer();
-            target.clear();
-            int read = channel.read(target);
+            int read = stream.readPlainIngress(slab.segment(), (int) slab.capacity());
             if (read > 0) {
                 if (stream.isClosed()) {
                     return;
@@ -530,7 +655,7 @@ public final class NativeTcpCarrier implements TransportEngine {
     }
 
     private void flushStream(SocketChannel channel, SelectionKey key) {
-        NativeTcpStream stream = streamByChannel.get(channel);
+        NativeTcpStream stream = resolveStream(channel);
         if (stream == null) {
             key.interestOps(SelectionKey.OP_READ);
             return;
@@ -544,7 +669,8 @@ public final class NativeTcpCarrier implements TransportEngine {
     }
 
     private void requestWriteInterest(SocketChannel channel) {
-        ReactorLoop owner = channelOwner.get(channel);
+        ChannelRuntimeState runtime = resolveRuntime(channel);
+        ReactorLoop owner = runtime != null ? runtime.owner() : channelOwner.get(channel);
         if (owner == null) {
             return;
         }
@@ -552,43 +678,65 @@ public final class NativeTcpCarrier implements TransportEngine {
     }
 
     private void onStreamClosed(SocketChannel channel) {
-        ReactorLoop owner = channelOwner.remove(channel);
+        ChannelRuntimeState runtime = runtimeByChannel.remove(channel);
+        if (runtime == null) {
+            ReactorLoop owner = channelOwner.remove(channel);
+            if (owner != null) {
+                owner.cancelKey(channel);
+            }
+            if (streamByChannel.remove(channel) != null) {
+                activeStreams.decrementAndGet();
+                activeConnections.decrementAndGet();
+            }
+            return;
+        }
+
+        ReactorLoop owner = runtime.detachOwner();
         if (owner != null) {
             owner.cancelKey(channel);
         }
-        Thread clientIngressThread = clientIngressThreads.remove(channel);
+
+        Thread clientIngressThread = runtime.detachClientIngressThread();
         if (clientIngressThread != null) {
             interruptAndJoin(clientIngressThread);
         }
-        Thread clientWriterThread = clientWriterThreads.remove(channel);
+        Thread clientWriterThread = runtime.detachClientWriterThread();
         if (clientWriterThread != null) {
             interruptAndJoin(clientWriterThread);
         }
-        if (streamByChannel.remove(channel) != null) {
+
+        streamByChannel.remove(channel, runtime.stream());
+        channelOwner.remove(channel);
+
+        if (runtime.beginLifecycleCleanup()) {
             activeStreams.decrementAndGet();
             activeConnections.decrementAndGet();
         }
     }
 
     private void requestClientWriteFlush(SocketChannel channel) {
-        Thread writer = clientWriterThreads.get(channel);
+        ChannelRuntimeState runtime = resolveRuntime(channel);
+        if (runtime == null) {
+            return;
+        }
+        Thread writer = runtime.clientWriterThread();
         if (writer != null) {
             LockSupport.unpark(writer);
         }
     }
 
-    private void startClientIngressPump(SocketChannel channel, NativeTcpStream stream) {
+    private void startClientIngressPump(ChannelRuntimeState runtime) {
         Thread thread = Thread.ofVirtual()
-                .name("carrier/native-tcp-client-ingress/" + stream.streamId())
-                .start(() -> runClientIngressLoop(channel, stream));
-        clientIngressThreads.put(channel, thread);
+                .name("carrier/native-tcp-client-ingress/" + runtime.stream().streamId())
+                .start(() -> runClientIngressLoop(runtime.channel(), runtime.stream()));
+        runtime.bindClientIngressThread(thread);
     }
 
-    private void startClientWriterPump(SocketChannel channel, NativeTcpStream stream) {
+    private void startClientWriterPump(ChannelRuntimeState runtime) {
         Thread thread = Thread.ofVirtual()
-                .name("carrier/native-tcp-client-writer/" + stream.streamId())
-                .start(() -> runClientWriterLoop(stream));
-        clientWriterThreads.put(channel, thread);
+                .name("carrier/native-tcp-client-writer/" + runtime.stream().streamId())
+                .start(() -> runClientWriterLoop(runtime.stream()));
+        runtime.bindClientWriterThread(thread);
     }
 
     private void runClientIngressLoop(SocketChannel channel, NativeTcpStream stream) {
@@ -666,22 +814,188 @@ public final class NativeTcpCarrier implements TransportEngine {
         communityTlsEngine.bindFileDescriptor(SocketChannelFdAccess.requireFd(channel));
     }
 
-    private void closeSelectorAndChannels() {
-        for (NativeTcpStream stream : streamByChannel.values()) {
-            stream.close();
+    private void validateServerSocketBootstrapOnce() {
+        if (!ffmSocketBackendArmed || !serverSocketValidationAttempted.compareAndSet(false, true)) {
+            return;
         }
+        serverSocketValidationSuccessful.set(runServerSocketValidationProbe());
+        if (!serverSocketValidationSuccessful.get()) {
+            LOG.log(System.Logger.Level.DEBUG,
+                    "Core socket seam could not be validated for the server path; continuing on the active NIO path.");
+        }
+    }
+
+    private void validateClientSocketBackendOnce(String host, int port) {
+        if (!ffmSocketBackendArmed || !clientSocketValidationAttempted.compareAndSet(false, true)) {
+            return;
+        }
+        clientSocketValidationSuccessful.set(runClientSocketValidationProbe(host, port));
+        if (!clientSocketValidationSuccessful.get()) {
+            LOG.log(System.Logger.Level.DEBUG, () ->
+                    "Core socket seam could not be validated for the client path " + host + ':' + port
+                            + "; continuing on the active NIO path.");
+        }
+    }
+
+    private SyscallHandles resolvedSocketHandlesForValidation() {
+        if (!ffmSocketBackendArmed) {
+            return null;
+        }
+        SyscallHandles handles = this.socketHandles;
+        return handles != null && handles.supportsPlainSocketIo() ? handles : null;
+    }
+
+    private boolean runServerSocketValidationProbe() {
+        SyscallHandles handles = resolvedSocketHandlesForValidation();
+        return handles != null && validateServerSocketBootstrap(handles);
+    }
+
+    private boolean runClientSocketValidationProbe(String host, int port) {
+        SyscallHandles handles = resolvedSocketHandlesForValidation();
+        return handles != null && validateClientSocketConnect(handles, host, port);
+    }
+
+    private boolean validateServerSocketBootstrap(SyscallHandles handles) {
+        int socketFd = -1;
+        try (LoanedBuffer scratch = allocator.allocateInfrastructure(SOCKADDR_IN_SIZE)) {
+            socketFd = openPosixStreamSocket(handles);
+            MemorySegment sockaddr = scratch.segment().asSlice(0, SOCKADDR_IN_SIZE);
+            writeIpv4Sockaddr(sockaddr,
+                    0,
+                    LOOPBACK_FIRST_OCTET,
+                    LOOPBACK_SECOND_OCTET,
+                    LOOPBACK_THIRD_OCTET,
+                    LOOPBACK_FOURTH_OCTET);
+            return bindSocket(handles, socketFd, sockaddr) == 0
+                    && listenSocket(handles, socketFd) == 0;
+        } catch (RuntimeException _) {
+            LOG.log(System.Logger.Level.DEBUG,
+                    "Core socket server bootstrap probe failed; compatibility fallback remains active.");
+            return false;
+        } finally {
+            closePosixSocketQuietly(handles, socketFd);
+        }
+    }
+
+    private boolean validateClientSocketConnect(SyscallHandles handles, String host, int port) {
+        int socketFd = -1;
+        try (ServerSocketChannel probeListener = ServerSocketChannel.open();
+             LoanedBuffer scratch = allocator.allocateInfrastructure(SOCKADDR_IN_SIZE)) {
+            probeListener.bind(new InetSocketAddress(LOOPBACK_HOST, 0));
+            int probePort = ((InetSocketAddress) probeListener.getLocalAddress()).getPort();
+
+            socketFd = openPosixStreamSocket(handles);
+            MemorySegment sockaddr = scratch.segment().asSlice(0, SOCKADDR_IN_SIZE);
+            writeIpv4Sockaddr(sockaddr,
+                    probePort,
+                    LOOPBACK_FIRST_OCTET,
+                    LOOPBACK_SECOND_OCTET,
+                    LOOPBACK_THIRD_OCTET,
+                    LOOPBACK_FOURTH_OCTET);
+            if (connectSocket(handles, socketFd, sockaddr) != 0) {
+                return false;
+            }
+
+            try (SocketChannel accepted = probeListener.accept()) {
+                return accepted != null;
+            }
+        } catch (IOException | RuntimeException _) {
+            LOG.log(System.Logger.Level.DEBUG, () ->
+                    "Core socket client probe failed for " + host + ':' + port
+                            + "; compatibility fallback remains active.");
+            return false;
+        } finally {
+            closePosixSocketQuietly(handles, socketFd);
+        }
+    }
+
+    private static void writeIpv4Sockaddr(MemorySegment target,
+                                          int port,
+                                          byte firstOctet,
+                                          byte secondOctet,
+                                          byte thirdOctet,
+                                          byte fourthOctet) {
+        target.fill((byte) 0);
+        if (SOCKADDR_INCLUDES_LENGTH) {
+            target.set(ValueLayout.JAVA_BYTE, 0, (byte) SOCKADDR_IN_SIZE);
+            target.set(ValueLayout.JAVA_BYTE, 1, (byte) AF_INET);
+        } else {
+            target.set(ValueLayout.JAVA_SHORT, 0, (short) AF_INET);
+        }
+        target.set(ValueLayout.JAVA_BYTE, 2, (byte) ((port >>> 8) & 0xFF));
+        target.set(ValueLayout.JAVA_BYTE, 3, (byte) (port & 0xFF));
+        target.set(ValueLayout.JAVA_BYTE, 4, firstOctet);
+        target.set(ValueLayout.JAVA_BYTE, 5, secondOctet);
+        target.set(ValueLayout.JAVA_BYTE, 6, thirdOctet);
+        target.set(ValueLayout.JAVA_BYTE, 7, fourthOctet);
+    }
+
+    private static boolean usesBsdSockaddrLayout() {
+        String osName = System.getProperty("os.name", "").toLowerCase(Locale.ROOT);
+        return osName.contains("mac")
+                || osName.contains("darwin")
+                || osName.contains("bsd");
+    }
+
+    private static int openPosixStreamSocket(SyscallHandles handles) {
+        try {
+            return (int) handles.socket().invokeExact(AF_INET, SOCK_STREAM, DEFAULT_IP_PROTOCOL);
+        } catch (Throwable ex) {
+            throw new IllegalStateException("Core socket() probe failed", ex);
+        }
+    }
+
+    private static int bindSocket(SyscallHandles handles, int socketFd, MemorySegment sockaddr) {
+        try {
+            return (int) handles.bind().invokeExact(socketFd, sockaddr, SOCKADDR_IN_SIZE);
+        } catch (Throwable ex) {
+            throw new IllegalStateException("Core bind() probe failed", ex);
+        }
+    }
+
+    private static int connectSocket(SyscallHandles handles, int socketFd, MemorySegment sockaddr) {
+        try {
+            return (int) handles.connect().invokeExact(socketFd, sockaddr, SOCKADDR_IN_SIZE);
+        } catch (Throwable ex) {
+            throw new IllegalStateException("Core connect() probe failed", ex);
+        }
+    }
+
+    private static int listenSocket(SyscallHandles handles, int socketFd) {
+        try {
+            return (int) handles.listen().invokeExact(socketFd, 1);
+        } catch (Throwable ex) {
+            throw new IllegalStateException("Core listen() probe failed", ex);
+        }
+    }
+
+    private static void closePosixSocketQuietly(SyscallHandles handles, int socketFd) {
+        if (socketFd < 0) {
+            return;
+        }
+        try {
+            @SuppressWarnings("unused")
+            int ignored = (int) handles.close().invokeExact(socketFd);
+        } catch (Throwable _) {
+            // best effort cleanup on the validation probe path
+        }
+    }
+
+    private void closeSelectorAndChannels() {
+        for (ChannelRuntimeState runtime : new ArrayList<>(runtimeByChannel.values())) {
+            runtime.stream().close();
+            Thread ingressThread = runtime.detachClientIngressThread();
+            if (ingressThread != null) {
+                ingressThread.interrupt();
+            }
+            Thread writerThread = runtime.detachClientWriterThread();
+            if (writerThread != null) {
+                writerThread.interrupt();
+            }
+        }
+        runtimeByChannel.clear();
         streamByChannel.clear();
         channelOwner.clear();
-
-        for (Thread thread : clientIngressThreads.values()) {
-            thread.interrupt();
-        }
-        clientIngressThreads.clear();
-
-        for (Thread thread : clientWriterThreads.values()) {
-            thread.interrupt();
-        }
-        clientWriterThreads.clear();
 
         for (ReactorLoop reactor : reactors) {
             reactor.closeSelector();
@@ -716,6 +1030,228 @@ public final class NativeTcpCarrier implements TransportEngine {
         }
     }
 
+    private enum SocketBackendMode {
+        AUTO(SOCKET_BACKEND_AUTO),
+        NIO(SOCKET_BACKEND_NIO),
+        POSIX_HYBRID(SOCKET_BACKEND_POSIX_HYBRID);
+
+        private final String configValue;
+
+        SocketBackendMode(String configValue) {
+            this.configValue = configValue;
+        }
+
+        private String configValue() {
+            return configValue;
+        }
+
+        private static SocketBackendMode resolveConfiguredMode() {
+            String configured = System.getProperty(SOCKET_BACKEND_PROPERTY);
+            if (configured == null || configured.isBlank()) {
+                configured = System.getProperty(SOCKET_BACKEND_ENV_ALIAS);
+            }
+            if (configured == null || configured.isBlank()) {
+                configured = System.getenv(SOCKET_BACKEND_ENV);
+            }
+            if (configured == null || configured.isBlank()) {
+                configured = System.getenv(SOCKET_BACKEND_ENV_ALIAS);
+            }
+            if (configured == null || configured.isBlank()) {
+                return AUTO;
+            }
+            return switch (configured.trim().toLowerCase(Locale.ROOT)) {
+                case SOCKET_BACKEND_AUTO -> AUTO;
+                case SOCKET_BACKEND_NIO -> NIO;
+                case SOCKET_BACKEND_POSIX_HYBRID -> POSIX_HYBRID;
+                default -> {
+                    String invalidMode = configured;
+                    LOG.log(System.Logger.Level.WARNING, () ->
+                            "Unknown Community socket backend mode '" + invalidMode + "'; defaulting to auto.");
+                    yield AUTO;
+                }
+            };
+        }
+    }
+
+    private record SocketBackendSelection(SocketBackendMode requestedMode,
+                                          Arena socketBackendArena,
+                                          SyscallHandles socketHandles,
+                                          boolean ffmSocketBackendArmed,
+                                          String detail) {
+
+        private static SocketBackendSelection resolve() {
+            SocketBackendMode configuredMode = SocketBackendMode.resolveConfiguredMode();
+            if (configuredMode == SocketBackendMode.NIO) {
+                return new SocketBackendSelection(
+                        configuredMode,
+                        null,
+                        null,
+                        false,
+                        "NIO backend pinned explicitly; Core syscall load skipped.");
+            }
+            if (IS_WINDOWS_RUNTIME) {
+                String detail = configuredMode == SocketBackendMode.POSIX_HYBRID
+                        ? resolveRequestedFallbackDetail(true, true)
+                        : resolveAutoFallbackDetail(true, true);
+                return new SocketBackendSelection(configuredMode, null, null, false, detail);
+            }
+
+            //CHECKSTYLE:OFF
+            // Direct shared-arena allocation: the Community carrier is the sole owner of
+            // the socket backend seam lifetime. Shared scope is required because resolved
+            // syscall handles are used across transport threads, and carrier.close()
+            // deterministically closes this arena.
+            Arena arena = Arena.ofShared();
+            //CHECKSTYLE:ON
+            SyscallHandles handles = null;
+            try {
+                handles = CoreSyscallLoader.load(arena);
+            } catch (IllegalCallerException | IllegalStateException | UnsupportedOperationException ex) {
+                LOG.log(System.Logger.Level.DEBUG,
+                        "[NativeTcpCarrier] Community-owned Core socket load unavailable; continuing on NIO fallback.",
+                        ex);
+            }
+
+            if (handles == null) {
+                closeQuietly(arena);
+                String detail;
+                if (configuredMode == SocketBackendMode.POSIX_HYBRID) {
+                    detail = "Core socket seam was requested explicitly but is unavailable; "
+                            + ACTIVE_NIO_FALLBACK_DETAIL;
+                } else {
+                    detail = "Core socket seam probe unavailable on this platform; "
+                            + ACTIVE_NIO_FALLBACK_DETAIL;
+                }
+                return new SocketBackendSelection(configuredMode, null, null, false, detail);
+            }
+
+            boolean plainSocketIoAvailable = handles.supportsPlainSocketIo();
+            boolean fdAccessAvailable = SocketChannelFdAccess.isRuntimeFdAccessAvailable();
+            boolean winsockModel = handles.hasIoctlsocket();
+            boolean seamArmed = plainSocketIoAvailable && fdAccessAvailable && !winsockModel;
+            String detail = resolveDetail(configuredMode, seamArmed, plainSocketIoAvailable, winsockModel);
+            return new SocketBackendSelection(configuredMode, arena, handles, seamArmed, detail);
+        }
+
+        private static String resolveDetail(SocketBackendMode configuredMode,
+                                            boolean seamArmed,
+                                            boolean plainSocketIoAvailable,
+                                            boolean winsockModel) {
+            if (seamArmed) {
+                return "Core socket seam armed for plain TCP traffic; "
+                        + "selector ownership and NIO fallback remain intact.";
+            }
+            if (configuredMode == SocketBackendMode.POSIX_HYBRID) {
+                return resolveRequestedFallbackDetail(plainSocketIoAvailable, winsockModel);
+            }
+            return resolveAutoFallbackDetail(plainSocketIoAvailable, winsockModel);
+        }
+
+        private static String resolveRequestedFallbackDetail(boolean plainSocketIoAvailable,
+                                                             boolean winsockModel) {
+            if (!plainSocketIoAvailable) {
+                return "Core socket seam was requested explicitly but is unavailable; "
+                        + ACTIVE_NIO_FALLBACK_DETAIL;
+            }
+            if (winsockModel) {
+                return "Core socket seam was requested explicitly but this platform uses the Winsock model; "
+                        + ACTIVE_NIO_FALLBACK_DETAIL;
+            }
+            return "Core socket seam was requested explicitly but "
+                    + "SocketChannel FD access is blocked by runtime openness; "
+                    + "add the required --add-opens flags or "
+                    + ACTIVE_NIO_FALLBACK_DETAIL;
+        }
+
+        private static String resolveAutoFallbackDetail(boolean plainSocketIoAvailable,
+                                                        boolean winsockModel) {
+            if (!plainSocketIoAvailable) {
+                return "Core socket seam resolved without plain socket syscall support; "
+                        + ACTIVE_NIO_FALLBACK_DETAIL;
+            }
+            if (winsockModel) {
+                return "Core socket seam resolved on a Winsock platform; "
+                        + ACTIVE_NIO_FALLBACK_DETAIL;
+            }
+            return "Core socket seam resolved but SocketChannel FD access "
+                    + "is blocked by runtime openness; "
+                    + "add the required --add-opens flags or "
+                    + ACTIVE_NIO_FALLBACK_DETAIL;
+        }
+
+    }
+
+    private final class ChannelRuntimeState {
+
+        private final SocketChannel channel;
+        private final NativeTcpStream stream;
+        private final String socketBackend;
+        private final AtomicReference<ReactorLoop> owner = new AtomicReference<>();
+        private final AtomicReference<Thread> clientIngressThread = new AtomicReference<>();
+        private final AtomicReference<Thread> clientWriterThread = new AtomicReference<>();
+        private final AtomicBoolean lifecycleCleanup = new AtomicBoolean(false);
+
+        private ChannelRuntimeState(SocketChannel channel,
+                                    NativeTcpStream stream) {
+            this.channel = channel;
+            this.stream = stream;
+            this.socketBackend = stream.plainSocketBackendName();
+        }
+
+        private SocketChannel channel() {
+            return channel;
+        }
+
+        private NativeTcpStream stream() {
+            return stream;
+        }
+
+        private String socketBackend() {
+            return socketBackend;
+        }
+
+        private void bindOwner(ReactorLoop newOwner) {
+            owner.set(newOwner);
+            channelOwner.put(channel, newOwner);
+        }
+
+        private void markRegistrationPending() {
+            stream.markRegistrationPending();
+        }
+
+        private ReactorLoop owner() {
+            return owner.get();
+        }
+
+        private ReactorLoop detachOwner() {
+            return owner.getAndSet(null);
+        }
+
+        private void bindClientIngressThread(Thread thread) {
+            clientIngressThread.set(thread);
+        }
+
+        private Thread detachClientIngressThread() {
+            return clientIngressThread.getAndSet(null);
+        }
+
+        private void bindClientWriterThread(Thread thread) {
+            clientWriterThread.set(thread);
+        }
+
+        private Thread clientWriterThread() {
+            return clientWriterThread.get();
+        }
+
+        private Thread detachClientWriterThread() {
+            return clientWriterThread.getAndSet(null);
+        }
+
+        private boolean beginLifecycleCleanup() {
+            return lifecycleCleanup.compareAndSet(false, true);
+        }
+    }
+
     private enum ReactorRequestType {
         REGISTER,
         ENABLE_WRITE,
@@ -730,6 +1266,7 @@ public final class NativeTcpCarrier implements TransportEngine {
         private final int index;
         private final Selector selector;
         private final Queue<ReactorRequest> pendingRequests = new ConcurrentLinkedQueue<>();
+        private final Set<SocketChannel> pendingWriteInterest = ConcurrentHashMap.newKeySet();
         private final AtomicBoolean wakeupPending = new AtomicBoolean(false);
 
         private volatile Thread thread;
@@ -762,11 +1299,7 @@ public final class NativeTcpCarrier implements TransportEngine {
         }
 
         private void enqueueRequest(ReactorRequest request) {
-            boolean offered = pendingRequests.offer(request);
-            if (!offered) {
-                throw new IllegalStateException("Failed to enqueue reactor request " + request.type()
-                        + " for channel: " + request.channel());
-            }
+            pendingRequests.offer(request);
             signalSelector();
         }
 
@@ -866,9 +1399,21 @@ public final class NativeTcpCarrier implements TransportEngine {
         private void registerChannel(SocketChannel channel) {
             try {
                 if (channel.isOpen()) {
-                    channel.register(selector, SelectionKey.OP_READ);
+                    NativeTcpStream stream = resolveStream(channel);
+                    boolean enableWriteOnRegister = pendingWriteInterest.remove(channel)
+                            || (stream != null && stream.hasPendingData());
+                    int interestOps = enableWriteOnRegister
+                            ? SelectionKey.OP_READ | SelectionKey.OP_WRITE
+                            : SelectionKey.OP_READ;
+                    channel.register(selector, interestOps);
+                    if (stream != null) {
+                        stream.markRegistrationReady();
+                    }
+                } else {
+                    pendingWriteInterest.remove(channel);
                 }
             } catch (IOException e) {
+                pendingWriteInterest.remove(channel);
                 NativeTcpStream stream = streamByChannel.get(channel);
                 if (stream != null) {
                     stream.close();
@@ -878,16 +1423,20 @@ public final class NativeTcpCarrier implements TransportEngine {
 
         private void enableWriteInterest(SocketChannel channel) {
             SelectionKey key = channel.keyFor(selector);
-            if (key != null && key.isValid()) {
-                try {
-                    key.interestOps(key.interestOps() | SelectionKey.OP_WRITE | SelectionKey.OP_READ);
-                } catch (RuntimeException _) {
-                    // key may be cancelled concurrently during shutdown
-                }
+            if (key == null || !key.isValid()) {
+                pendingWriteInterest.add(channel);
+                return;
+            }
+            pendingWriteInterest.remove(channel);
+            try {
+                key.interestOps(key.interestOps() | SelectionKey.OP_WRITE | SelectionKey.OP_READ);
+            } catch (RuntimeException _) {
+                pendingWriteInterest.add(channel);
             }
         }
 
         private void cancelSelection(SocketChannel channel) {
+            pendingWriteInterest.remove(channel);
             SelectionKey key = channel.keyFor(selector);
             if (key != null) {
                 key.cancel();
